LPS-155092 Set max heigh to the tab content to avoid overflow

--- a/modules/apps/product-navigation/product-navigation-applications-menu-web/src/main/resources/META-INF/resources/css/ApplicationsMenu.scss
+++ b/modules/apps/product-navigation/product-navigation-applications-menu-web/src/main/resources/META-INF/resources/css/ApplicationsMenu.scss
@@ -21,6 +21,14 @@ html#{$cadmin-selector} {
 			.btn-monospaced {
 				color: $cadmin-secondary;
 			}
+
+			.tab-pane {
+				$footerHeight: 65px;
+				$headerHeight: 60px;
+
+				max-height: calc(100vh - #{$footerHeight + $headerHeight});
+				overflow-y: auto;
+			}
 		}
 
 		.applications-menu-header .nav-link {
